--- a/Lab 1/YoloPackage/YoloPackage.csproj
+++ b/Lab 1/YoloPackage/YoloPackage.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <PackageId>Mozgovyx.YoloPackage</PackageId>
+    <Version>0.1.2309.1</Version>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
