--- a/Lab 1/ConsoleApp/ConsoleApp.csproj
+++ b/Lab 1/ConsoleApp/ConsoleApp.csproj
@@ -1,14 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <ItemGroup>
-    <ProjectReference Include="..\YoloPackage\YoloPackage.csproj" />
-  </ItemGroup>
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Mozgovyx.YoloPackage" Version="1.1.2309.1" />
+  </ItemGroup>
 </Project>
